k8s/base/surrealdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: houston-cv
  labels:
    app: surrealdb
spec:
  type: ClusterIP
  selector:
    app: surrealdb
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
